--- a/views/link.haml
+++ b/views/link.haml
@@ -1,6 +1,7 @@
 %li
   = post[:full_link]
   %br
-  = post[:text_link]
+  %a{:href => post[:text_link]}
+    = post[:text_link]
   %br
   = "by #{post[:poster]}, #{post[:points]}"
