--- a/views/email.haml
+++ b/views/email.haml
@@ -2,5 +2,5 @@
   %body
     %h2
       = EMAIL_HEADER
-    %ul{ :style => 'list-style-type: none; margin-left: -30px;' }
+    %ul{ :style => 'list-style-type: none; padding: 0px' }
       = li_links
