--- a/views/email.haml
+++ b/views/email.haml
@@ -1,5 +1,5 @@
 %html
-  %body
+  %body{ :style => 'font-family: Verdana, Arial, Helvetica, sans-serif;' }
     %h2
       = EMAIL_HEADER
     %ul{ :style => 'list-style-type: none; padding: 0px' }
