--- a/views/email.haml
+++ b/views/email.haml
@@ -1,6 +1,6 @@
 %html
-  %body{ :style => 'font-family: Verdana, Arial, Helvetica, sans-serif;' }
-    %h2
+  %body{ :style => 'font-family: Verdana,Arial,Helvetica,sans-serif' }
+    %h2{ :style => 'padding-left: 8px' }
       = EMAIL_HEADER
-    %ul{ :style => 'list-style-type: none; padding: 0px' }
+    %ul{ :style => 'list-style-type: none; padding: 0' }
       = li_links
